# ffmpeg-kit

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  android.sh  apple.sh  ios.sh  linux.sh  ll100-ffmpeg-kit-ios-https.podspec  macos.sh  tvos.sh  xros.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue-template.md
.github/workflows/: Android-CI-Espresso.yml  android-build-scripts.yml  gradle-wrapper-validation.yml  ios-build-scripts.yml  linux-build-scripts.yml  macos-build-scripts.yml  nightly-builds-android.yml  nightly-builds-apple.yml  periodic-builds-android.yml  periodic-builds-apple.yml  stale.yml  tvos-build-scripts.yml
android/: .github  .gitignore  README.md  build.gradle  settings.gradle
android/app/: Doxyfile  proguard-rules.pro
android/ffmpeg-kit-android-lib/: Doxyfile  build.gradle  consumer-rules.pro  proguard-rules.pro
android/jni/: .gitignore  Android.mk
apple/: .gitignore  Doxyfile  Makefile.in  README.md  aclocal.m4  configure  configure.ac  libtool
apple/src/: AbstractSession.h  AbstractSession.m  ArchDetect.h  ArchDetect.m  AtomicLong.h  AtomicLong.m  Chapter.h  Chapter.m  ExecuteCallback.h  ExecuteDelegate.h  FFmpegExecution.h  FFmpegExecution.m  FFmpegKit.h  FFmpegKit.m  FFmpegKitConfig.h  FFmpegKitConfig.m  FFmpegSession.h  FFmpegSession.m  FFmpegSessionCompleteCallback.h  FFprobeKit.h  FFprobeKit.m  FFprobeSession.h  FFprobeSession.m  FFprobeSessionCompleteCallback.h  Level.h  Log.h  Log.m  LogCallback.h  LogDelegate.h  LogRedirectionStrategy.h  Makefile.am  Makefile.in  MediaInformation.h  MediaInformation.m  MediaInformationJsonParser.h  MediaInformationJsonParser.m  MediaInformationParser.h  MediaInformationParser.m  MediaInformationSession.h  MediaInformationSession.m  (+31 more)
docs/: _config.yml  index.md
ffmpeg-kit-ios-min/ffmpegkit.xcframework/: Info.plist
ffmpeg-kit-ios-min/libavcodec.xcframework/: Info.plist
ffmpeg-kit-ios-min/libavdevice.xcframework/: Info.plist
ffmpeg-kit-ios-min/libavfilter.xcframework/: Info.plist
ffmpeg-kit-ios-min/libavformat.xcframework/: Info.plist
ffmpeg-kit-ios-min/libavutil.xcframework/: Info.plist
ffmpeg-kit-ios-min/libswresample.xcframework/: Info.plist
ffmpeg-kit-ios-min/libswscale.xcframework/: Info.plist
flutter/flutter/: .gitignore  .metadata  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
flutter/flutter_platform_interface/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
linux/: .gitignore  Doxyfile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac  libtool
linux/src/: .gitignore  AbstractSession.cpp  AbstractSession.h  ArchDetect.cpp  ArchDetect.h  Chapter.cpp  Chapter.h  FFmpegKit.cpp  FFmpegKit.h  FFmpegKitConfig.cpp  FFmpegKitConfig.h  FFmpegSession.cpp  FFmpegSession.h  FFmpegSessionCompleteCallback.h  FFprobeKit.cpp  FFprobeKit.h  FFprobeSession.cpp  FFprobeSession.h  FFprobeSessionCompleteCallback.h  Level.h  Log.cpp  Log.h  LogCallback.h  LogRedirectionStrategy.h  Makefile.am  Makefile.in  MediaInformation.cpp  MediaInformation.h  MediaInformationJsonParser.cpp  MediaInformationJsonParser.h  MediaInformationSession.cpp  MediaInformationSession.h  MediaInformationSessionCompleteCallback.h  Packages.cpp  Packages.h  ReturnCode.cpp  ReturnCode.h  Session.h  SessionState.h  Signal.h  (+25 more)
objc/: Makefile.in  libtool
objc/src/: ArchDetect.h  AtomicLong.h  ExecuteDelegate.h  FFmpegKit.h  FFmpegKit.m  FFmpegKitConfig.m  FFprobeKit.m  Makefile.am  Makefile.in  MediaInformation.h  MediaInformation.m  MediaInformationParser.h  MediaInformationParser.m  Statistics.m  StatisticsDelegate.h  StreamInformation.h  ffmpegkit_exception.h  fftools_ffmpeg_videotoolbox.c
react-native/: README.md  ffmpeg-kit-react-native.podspec  package.json
react-native/android/: build.gradle  gradle.properties
react-native/ios/: FFmpegKitReactNativeModule.h  FFmpegKitReactNativeModule.m
react-native/src/: index.d.ts  index.js
scripts/: common-android.sh  common-arch.sh  common-ios.sh  common-tvos.sh  function-android.sh  function-apple.sh  function-ios.sh  function-linux.sh  function-macos.sh  function-tvos.sh  function-xros.sh  function.sh  main-android.sh  main-ios.sh  main-linux.sh  main-macos.sh  main-tvos.sh  main-xros.sh  run-android.sh  run-apple.sh  run-linux.sh  source.sh  variable.sh
scripts/android/: chromaprint.sh  cpu-features.sh  dav1d.sh  expat.sh  ffmpeg.sh  fontconfig.sh  freetype.sh  fribidi.sh  giflib.sh  gmp.sh  gnutls.sh  harfbuzz.sh  jpeg.sh  kvazaar.sh  lame.sh  leptonica.sh  libaom.sh  libass.sh  libiconv.sh  libilbc.sh  libogg.sh  libpng.sh  libsamplerate.sh  libsndfile.sh  libtheora.sh  libuuid.sh  libvidstab.sh  libvorbis.sh  libvpx.sh  libwebp.sh  libxml2.sh  nettle.sh  opencore-amr.sh  openh264.sh  openssl.sh  opus.sh  rubberband.sh  sdl.sh  shine.sh  snappy.sh  (+12 more)
scripts/apple/: chromaprint.sh  dav1d.sh  expat.sh  ffmpeg-kit.sh  ffmpeg.sh  fontconfig.sh  freetype.sh  fribidi.sh  giflib.sh  gmp.sh  gnutls.sh  harfbuzz.sh  jpeg.sh  kvazaar.sh  lame.sh  leptonica.sh  libaom.sh  libass.sh  libilbc.sh  libogg.sh  libpng.sh  libsamplerate.sh  libsndfile.sh  libtheora.sh  libvidstab.sh  libvorbis.sh  libvpx.sh  libwebp.sh  libxml2.sh  nettle.sh  opencore-amr.sh  openh264.sh  openssl.sh  opus.sh  rubberband.sh  sdl.sh  shine.sh  snappy.sh  soxr.sh  speex.sh  (+10 more)
scripts/linux/: chromaprint.sh  dav1d.sh  ffmpeg-kit.sh  ffmpeg.sh  kvazaar.sh  libaom.sh  libilbc.sh  openh264.sh  openssl.sh  srt.sh  x264.sh  zimg.sh
scripts/objc/: chromaprint.sh  expat.sh  ffmpeg-kit.sh  ffmpeg.sh  freetype.sh  (+41 more)
src/: .gitignore
tools/: android_doc.sh  android_javadoc.sh  apple_doc.sh  clean.sh  create_ios_universal_test_package.sh  create_macos_universal_test_package.sh  create_tvos_universal_test_package.sh  linux_doc.sh  tag.sh
tools/patch/cmake/x265/: CMakeLists.txt
tools/patch/make/giflib/: Makefile.am  configure.ac
tools/patch/make/rubberband/: Makefile.android.in  Makefile.ios.in  configure.ac  rubberband.pc.in
(+1688 files in other folders)
