lib_LTLIBRARIES = libgif.la

libgif_la_SOURCES = dgif_lib.c egif_lib.c gifalloc.c gif_err.c gif_font.c gif_hash.c openbsd-reallocarray.c quantize.c

include_HEADERS = gif_lib.h

libgif_la_CFLAGS = $(CFLAGS)
libgif_la_OBJCFLAGS = $(CFLAGS)
libgif_la_CXXFLAGS = $(CXXFLAGS)
libgif_la_LDFLAGS = $(LDFLAGS)
